# uwindsor_FE_2024

./: .gitignore  LICENSE  LoggedData.db  README.md  Sqlite_CRUD_Tutorial.sln
Accumulator/: Batteries.mat  Batteries_lib.slx  FSAE_Battery.mat  PrechargeModel.slx  PrechargeModel.slx.autosave  PrechargeModel.slxc  Shutdown_Model.slx  Shutdown_Model.slx.autosave  model_battery.slx  tester.m
Accumulator/+Batteries/: OldModule.ssc
Accumulator/BMS Simulation/: FSAE_Battery.slx  FSAE_Battery_lib.slx
Accumulator/Controls/: PrechargeCalculations.mlx  PrechargeModel.slx  PrechargeModel_v2.slx  Shutdown_Model_2.slx  Shutdown_Model_2.slx.autosave
Accumulator/slprj/: sl_proj.tmw
Dash/: CMakeLists.txt  main.cpp
Driver Interface/: Database.py  README.md  VCU Comms.txt  VCU_With_RTD_Sequence_Sort_Of  button-test.py  main_screen.py
Driver Interface/2025 Comp Code/: MegaCode.cpp
Driver Interface/C++ Sqlite Code/: README
Powertrain/: README.md
Powertrain/Accumulator Voltage Indicator/: Accumulator_Voltage_Indicator.PcbDoc  Accumulator_Voltage_Indicator.PrjPcb  Accumulator_Voltage_Indicator.SchDoc  Sheet1.SchDoc
Powertrain/Ready To Move Light/: CAMtastic2.Cam  PCB2.PcbDoc  ReadyToMoveLight.BomDoc  ReadyToMoveLight.PrjPcb  Sheet2.SchDoc
Powertrain/Safety Status Indicator/: CAMtastic3.Cam  Job1.OutJob  (+6 more)
Powertrain/Safety Status Indicator LED/: CAMtastic4.Cam  PcbLib1.PcbLib  Schlib1.SchLib  Status_indicator_LEDS.BomDoc  Status_indicator_LEDS.PrjPcb
Sqlite_CRUD_Tutorial/: Sqlite_CRUD_Tutorial.cpp  Sqlite_CRUD_Tutorial.vcxproj  Sqlite_CRUD_Tutorial.vcxproj.filters
(+519 files in other folders)
